force-app/main/default/objects/Online_User_API_Audit__c/Online_User_API_Audit__c.object-meta.xml
<CustomObject>
    <label>Online User API Audit</label>
    <nameField>
        <displayFormat>OAR-{0000000000}</displayFormat>
        <label>Online API Audit Recprd</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online User API Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>