force-app/main/default/objects/Online_User_API_Audit__c/fields/API_Request_For__c.field-meta.xml
<CustomField>
    <fullName>API_Request_For__c</fullName>
    <label>API Request For</label>
    <length>30</length>
    <type>Text</type>
</CustomField>