force-app/main/default/objects/Online_User_API_Audit__c/fields/API_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>API_Request_Time__c</fullName>
    <label>API Request Time</label>
    <type>DateTime</type>
</CustomField>