force-app/main/default/objects/Online_User_API_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Request_By__c</columns>
    <columns>API_Request_For__c</columns>
    <columns>API_Request_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>